# smartmeter-datacollector

./: .copyright.tmpl  .dockerignore  .env  .gitignore  Dockerfile  LICENSE  Pipfile  README.md  datacollector.ini.example  docker-compose.yml  pyproject.toml  setup.py  smartmeter-datacollector.service
.github/workflows/: build-deb.yml  publish-to-pypi.yml  python-code-checks.yml
LICENSES/: README.md
debian/: changelog  control  postinst  python3-smartmeter-datacollector.service  rules
debian-tmpl/: changelog  control  copyright  package.install  postinst  prerm  rules
scripts/: .pbuilderrc  build.sh  build_deb.sh  build_py.sh  build_shiv.sh  build_srcdeb.sh  debianize.sh  smartmeter-datacollector
smartmeter_datacollector/: __init__.py  __main__.py  __version__.py  app.py  collector.py  config.py  factory.py
smartmeter_datacollector/sinks/: csv_sink.py  data_sink.py  logger_sink.py  mqtt_sink.py
smartmeter_datacollector/smartmeter/: __init__.py  cosem.py  hdlc_dlms_parser.py  iskraam550.py  kamstrup_han.py  lge360.py  lge450.py  lge570.py  meter.py  meter_data.py  obis.py  reader.py  reader_data.py  serial_reader.py  siemens_td3511.py
tests/: __init__.py  conftest.py  test_collector.py  test_config.py  test_csv_sink.py  test_hdlc_dlms_parser.py  test_iskraam550.py  test_lge360.py  test_lge450.py  test_lge570.py  test_logger_sink.py  test_meter_data.py  test_mqtt_sink.py  test_obis.py  test_siemens_td3511.py  utils.py
tests/testdata/: iskra_am550.py  lg_e360.py  lg_e450.py  lg_e570.py
