[project]
name = "smartmeter-datacollector"
version = "1.2.1"
description = "Smart Meter Data Collector"
authors = [{ name = "Supercomputing Systems AG", email = "info@scs.ch" }]
maintainers = [{ name = "Supercomputing Systems AG", email = "info@scs.ch" }]
license = "GPL-2.0-only"
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Typing :: Typed",
]
requires-python = ">=3.8,<4.0"
dependencies = [
    "aioserial ~= 1.3.1",
    "asyncio-mqtt ~= 0.16.2",
    "gurux-dlms == 1.0.150",
    "paho-mqtt ~= 1.6.1",
]

[tool.poetry.group.dev.dependencies]
autopep8 = "*"
isort = "*"
licenseheaders = "*"
poethepoet = "*"
pylint = "*"
pytest = "*"
pytest-asyncio = "*"
pytest-mock = "*"
shiv = "~=1.0"

[project.urls]
homepage = "https://github.com/scs/smartmeter-datacollector"
repository = "https://github.com/scs/smartmeter-datacollector"
documentation = "https://github.com/scs/smartmeter-datacollector/wiki"
"Bug Reports" = "https://github.com/scs/smartmeter-datacollector/issues"
"Pull Requests" = "https://github.com/scs/smartmeter-datacollector/pulls"
"SCS" = "https://www.scs.ch"

[project.scripts]
smartmeter-datacollector = 'smartmeter_datacollector.__main__:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
build_py = "bash ./scripts/build_py.sh"
build_shiv = "bash ./scripts/build_shiv.sh"
build_deb = "bash ./scripts/build_deb.sh"
build_srcdeb = "bash ./scripts/build_deb.sh source"
clean = "rm -rf build dist deb_dist .pytest_cache"
debianize = "bash ./scripts/debianize.sh"
format = "autopep8 --in-place  -r --aggressive smartmeter_datacollector/"
format_check = "autopep8 --diff -r --aggressive smartmeter_datacollector/"
isort = "isort ."
isort_check = "isort --check ."
license = "licenseheaders -t .copyright.tmpl --ext py --current-year --owner 'Supercomputing Systems AG' --projname 'smartmeter-datacollector'"
lint = "pylint smartmeter_datacollector/"
lint_check = "pylint smartmeter_datacollector/ --exit-zero"
test = "pytest"

[tool.autopep8]
max_line_length = 120

[tool.isort]
line_length = 120

[tool.pylint.MASTER]
init-hook='import sys; sys.path.append("./smartmeter_datacollector")'

[tool.pylint.FORMAT]
max-line-length=120

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring"
]

[tool.pylint.SIMILARITIES]
ignore-comments = true
ignore-docstrings = true
ignore-imports = true
